// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumb> when has less than 4 items should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="breadcrumbs"
        class="breadcrumb"
      >
        <ol>
          <li
            class="breadcrumb__item"
            data-testid="breadcrumb-item"
          >
            <a
              class="subtitle subtitle--size-md"
              href="#item-0"
            >
              Label 1
            </a>
          </li>
          <li
            class="breadcrumb__item"
            data-testid="breadcrumb-item"
          >
            <a
              class="subtitle subtitle--size-md"
              href="#item-1"
            >
              Label 2
            </a>
          </li>
          <li
            class="breadcrumb__item"
            data-testid="breadcrumb-item"
          >
            <a
              class="subtitle subtitle--size-md"
              href="#item-2"
            >
              Label 3
            </a>
          </li>
        </ol>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="breadcrumbs"
      class="breadcrumb"
    >
      <ol>
        <li
          class="breadcrumb__item"
          data-testid="breadcrumb-item"
        >
          <a
            class="subtitle subtitle--size-md"
            href="#item-0"
          >
            Label 1
          </a>
        </li>
        <li
          class="breadcrumb__item"
          data-testid="breadcrumb-item"
        >
          <a
            class="subtitle subtitle--size-md"
            href="#item-1"
          >
            Label 2
          </a>
        </li>
        <li
          class="breadcrumb__item"
          data-testid="breadcrumb-item"
        >
          <a
            class="subtitle subtitle--size-md"
            href="#item-2"
          >
            Label 3
          </a>
        </li>
      </ol>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Breadcrumb> when has more than 3 items When modal is closed should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="breadcrumbs"
        class="breadcrumb"
      >
        <ol>
          <li
            class="breadcrumb__item"
            data-testid="breadcrumb-item"
          >
            <a
              class="subtitle subtitle--size-md"
              href="#item-0"
            >
              Label 1
            </a>
          </li>
          <li>
            <div
              class="toggle-dropdown"
            >
              <button
                class="btn btn--neutral btn--size-sm toggle-btn toggle-btn--variant-text"
                data-testid="toggle-dropdown-button"
                title="Abrir mais opções para o item"
                type="button"
              >
                <span
                  class="icon btn__icon"
                  data-testid="more-horizontal"
                >
                  <svg
                    fill="none"
                    height="18"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 14C13.1046 14 14 13.1046 14 12C14 10.8954 13.1046 10 12 10C10.8954 10 10 10.8954 10 12C10 13.1046 10.8954 14 12 14Z"
                      fill="currentColor"
                    />
                    <path
                      d="M19 14C20.1046 14 21 13.1046 21 12C21 10.8954 20.1046 10 19 10C17.8954 10 17 10.8954 17 12C17 13.1046 17.8954 14 19 14Z"
                      fill="currentColor"
                    />
                    <path
                      d="M5 14C6.10457 14 7 13.1046 7 12C7 10.8954 6.10457 10 5 10C3.89543 10 3 10.8954 3 12C3 13.1046 3.89543 14 5 14Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </li>
          <li
            class="breadcrumb__item"
            data-testid="breadcrumb-item"
          >
            <a
              class="subtitle subtitle--size-md"
              href="#item-3"
            >
              Label 4
            </a>
          </li>
        </ol>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="breadcrumbs"
      class="breadcrumb"
    >
      <ol>
        <li
          class="breadcrumb__item"
          data-testid="breadcrumb-item"
        >
          <a
            class="subtitle subtitle--size-md"
            href="#item-0"
          >
            Label 1
          </a>
        </li>
        <li>
          <div
            class="toggle-dropdown"
          >
            <button
              class="btn btn--neutral btn--size-sm toggle-btn toggle-btn--variant-text"
              data-testid="toggle-dropdown-button"
              title="Abrir mais opções para o item"
              type="button"
            >
              <span
                class="icon btn__icon"
                data-testid="more-horizontal"
              >
                <svg
                  fill="none"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 14C13.1046 14 14 13.1046 14 12C14 10.8954 13.1046 10 12 10C10.8954 10 10 10.8954 10 12C10 13.1046 10.8954 14 12 14Z"
                    fill="currentColor"
                  />
                  <path
                    d="M19 14C20.1046 14 21 13.1046 21 12C21 10.8954 20.1046 10 19 10C17.8954 10 17 10.8954 17 12C17 13.1046 17.8954 14 19 14Z"
                    fill="currentColor"
                  />
                  <path
                    d="M5 14C6.10457 14 7 13.1046 7 12C7 10.8954 6.10457 10 5 10C3.89543 10 3 10.8954 3 12C3 13.1046 3.89543 14 5 14Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="breadcrumb__item"
          data-testid="breadcrumb-item"
        >
          <a
            class="subtitle subtitle--size-md"
            href="#item-3"
          >
            Label 4
          </a>
        </li>
      </ol>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Breadcrumb> when has more than 3 items When modal is open should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="breadcrumbs"
        class="breadcrumb"
      >
        <ol>
          <li
            class="breadcrumb__item"
            data-testid="breadcrumb-item"
          >
            <a
              class="subtitle subtitle--size-md"
              href="#item-0"
            >
              Label 1
            </a>
          </li>
          <li>
            <div
              class="toggle-dropdown toggle-dropdown--is-open"
            >
              <button
                class="btn btn--neutral btn--size-sm btn--is-pressed toggle-btn toggle-btn--variant-text"
                data-testid="toggle-dropdown-button"
                title="Abrir mais opções para o item"
                type="button"
              >
                <span
                  class="icon btn__icon"
                  data-testid="more-horizontal"
                >
                  <svg
                    fill="none"
                    height="18"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 14C13.1046 14 14 13.1046 14 12C14 10.8954 13.1046 10 12 10C10.8954 10 10 10.8954 10 12C10 13.1046 10.8954 14 12 14Z"
                      fill="currentColor"
                    />
                    <path
                      d="M19 14C20.1046 14 21 13.1046 21 12C21 10.8954 20.1046 10 19 10C17.8954 10 17 10.8954 17 12C17 13.1046 17.8954 14 19 14Z"
                      fill="currentColor"
                    />
                    <path
                      d="M5 14C6.10457 14 7 13.1046 7 12C7 10.8954 6.10457 10 5 10C3.89543 10 3 10.8954 3 12C3 13.1046 3.89543 14 5 14Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </button>
              <div>
                <div
                  class="card card--elevation-hg dropdown-menu toggle-dropdown__list"
                  data-testid="toggle-dropdown-list"
                >
                  <ul
                    class="dropdown-menu__list"
                  >
                    <li
                      class="dropdown-menu__list-item"
                    >
                      <a
                        class="dropdown-menu-item"
                        href="#item-1"
                        tabindex="0"
                      >
                        <span
                          class="text text--size-sm dropdown-menu-item__text"
                        >
                          Label 2
                        </span>
                      </a>
                    </li>
                    <li
                      class="dropdown-menu__list-item"
                    >
                      <a
                        class="dropdown-menu-item"
                        href="#item-2"
                        tabindex="0"
                      >
                        <span
                          class="text text--size-sm dropdown-menu-item__text"
                        >
                          Label 3
                        </span>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </li>
          <li
            class="breadcrumb__item"
            data-testid="breadcrumb-item"
          >
            <a
              class="subtitle subtitle--size-md"
              href="#item-3"
            >
              Label 4
            </a>
          </li>
        </ol>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="breadcrumbs"
      class="breadcrumb"
    >
      <ol>
        <li
          class="breadcrumb__item"
          data-testid="breadcrumb-item"
        >
          <a
            class="subtitle subtitle--size-md"
            href="#item-0"
          >
            Label 1
          </a>
        </li>
        <li>
          <div
            class="toggle-dropdown toggle-dropdown--is-open"
          >
            <button
              class="btn btn--neutral btn--size-sm btn--is-pressed toggle-btn toggle-btn--variant-text"
              data-testid="toggle-dropdown-button"
              title="Abrir mais opções para o item"
              type="button"
            >
              <span
                class="icon btn__icon"
                data-testid="more-horizontal"
              >
                <svg
                  fill="none"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 14C13.1046 14 14 13.1046 14 12C14 10.8954 13.1046 10 12 10C10.8954 10 10 10.8954 10 12C10 13.1046 10.8954 14 12 14Z"
                    fill="currentColor"
                  />
                  <path
                    d="M19 14C20.1046 14 21 13.1046 21 12C21 10.8954 20.1046 10 19 10C17.8954 10 17 10.8954 17 12C17 13.1046 17.8954 14 19 14Z"
                    fill="currentColor"
                  />
                  <path
                    d="M5 14C6.10457 14 7 13.1046 7 12C7 10.8954 6.10457 10 5 10C3.89543 10 3 10.8954 3 12C3 13.1046 3.89543 14 5 14Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </button>
            <div>
              <div
                class="card card--elevation-hg dropdown-menu toggle-dropdown__list"
                data-testid="toggle-dropdown-list"
              >
                <ul
                  class="dropdown-menu__list"
                >
                  <li
                    class="dropdown-menu__list-item"
                  >
                    <a
                      class="dropdown-menu-item"
                      href="#item-1"
                      tabindex="0"
                    >
                      <span
                        class="text text--size-sm dropdown-menu-item__text"
                      >
                        Label 2
                      </span>
                    </a>
                  </li>
                  <li
                    class="dropdown-menu__list-item"
                  >
                    <a
                      class="dropdown-menu-item"
                      href="#item-2"
                      tabindex="0"
                    >
                      <span
                        class="text text--size-sm dropdown-menu-item__text"
                      >
                        Label 3
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </li>
        <li
          class="breadcrumb__item"
          data-testid="breadcrumb-item"
        >
          <a
            class="subtitle subtitle--size-md"
            href="#item-3"
          >
            Label 4
          </a>
        </li>
      </ol>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
